syntax = "proto3";

package com.grpc.ms_pagamento;

option java_multiple_files = true;
option java_package = "com.grpc.ms_pagamento";

service PagamentoService {
    // Cria link de pagamento (Leil√£o chama quando acha vencedor)
    rpc SolicitarPagamento (PagamentoRequest) returns (PagamentoResponse);
}

message PagamentoRequest {
    int32 leilao_id = 1;
    int32 cliente_id = 2;
    double valor = 3;
}

message PagamentoResponse {
    string link_pagamento = 1;
    string status = 2;
}